@@ -2,4 +2,9 @@
 
 AM_INIT_AUTOMAKE(kdirstat,1.7.8-devel)
 
+AC_CHECK_LIB(qtreemap,QTreeMapVersion,,,-lqt)
+
+
+AC_CHECK_HEADER(qtreemap.h, HAVE_QTREEMAP)
+
 KDE_CHECK_LONG_LONG
